chore - #199 불변성을 위한 List.of 사용